decrease font size to avoid going into space on safari

--- a/server/public/css/dark/intro.css
+++ b/server/public/css/dark/intro.css
@@ -50,7 +50,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: bold;
-  font-size: 69px;
+  font-size: 65px;
   /* line-height: 87px; */
   line-height: 67px;
 
